# rp2040-rtt

./: .gitignore  CMakeLists.txt  CMakePresets.json  hello.c  hello_rtt.code-workspace  readme.md
RTT/: CMakeLists.txt  SEGGER_RTT.h  SEGGER_RTT_printf.c  stdio.c
